--- a/homepage.html
+++ b/homepage.html
@@ -11,11 +11,27 @@
     <section id="header">
         <a href="#"><img src="logo.png" class="logo" alt=""></a>
         <h3>Australian Rare Vinyls</h3>
-        <ul id="menu">
-            <li><a href="#home">Home</a></li>
+        <ul id="navbar">
+            <li><a href="homepage.html">Home</a></li>
             <li><a href="#recom">Recommendations</a></li>
             <li><a href="#browse">Browse</a></li>
             <li><a href="#account">Your Account</a></li>
+            <li><a href="cart.html"><svg 
+                xmlns="http://www.w3.org/2000/svg" 
+                aria-hidden="true" 
+                role="img" 
+                width="1em"
+                height="1em" 
+                preserveAspectRatio="xMidYMid meet" 
+                viewBox="0 0 24 24">
+                <g fill="none" 
+                stroke="currentColor" 
+                stroke-linecap="round" 
+                stroke-linejoin="round" 
+                stroke-width="2">
+                <path d="M3.977 9.84A2 2 0 0 1 5.971 8h12.058a2 2 0 0 1 1.994 1.84l.803 10A2 2 0 0 1 18.833 22H5.167a2 2 0 0 1-1.993-2.16l.803-10Z"/>
+                <path d="M16 11V6a4 4 0 0 0-4-4v0a4 4 0 0 0-4 4v5"/></g>
+                </svg></a></li>
         </ul>
     </section>
     <dl>Featured Record
