--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
         <a href="#"><img src="logo.png" class="logo" alt=""></a>
         <h3>Australian Rare Vinyls</h3>
         <ul id="navbar">
-            <li><a href="homepage.html">Home</a></li>
+            <li><a class='active' href="homepage.html">Home</a></li>
             <li><a href="#recom">Recommendations</a></li>
             <li><a href="#browse">Browse</a></li>
             <li><a href="#account">Your Account</a></li>
@@ -34,6 +34,7 @@
                 </svg></a></li>
         </ul>
     </section>
+    <section ></section>
     <dl>Featured Record
         <dt>Kupla Coniferous</dt>
         <dt>Eminem</dt>
