--- a/homepage.html
+++ b/homepage.html
@@ -34,123 +34,62 @@
                 </svg></a></li>
         </ul>
     </section>
-    <section ></section>
-    <dl>Featured Record
-        <dt>Kupla Coniferous</dt>
-        <dt>Eminem</dt>
-        <dd>Lorem ipsum<br />dolor sit amet, consectetur<br />adipiscing elit. Vestibulum tincidunt<br />placerat
+    <section id='feature'>
+        <div class="featured-1">
+            <img src="img/thumb1.jpg" alt="Kupla Coniferous Album Cover">
+            <h4>Featured Record</h4>
+            <h3>Kupla Coniferous</h3>
+            <h4>Eminem</h4>
+            <p>Lorem ipsum<br />dolor sit amet, consectetur<br />adipiscing elit. Vestibulum tincidunt<br />placerat
             lacus, quis pharetra sem<br />ornare eu. In pulvinar iaculis <br />condimentum. Nullam feugiat<br />venenatis
             pulvinar. Pellentesque et <br />dolor a nisi suscipit mattis. Nunc <br />sapien sem, bibendum at
-            molestie <br />non, sagittis vitae ligula.</dd>
-    </dl>
-    <dl>Featured Record
-        <dt>Take Me Down</dt>
-        <dt>Drake</dt>
-        <dd>Lorem ipsum<br />dolor sit amet, consectetur<br />adipiscing elit. Vestibulum tincidunt<br />placerat
+            molestie <br />non, sagittis vitae ligula.</p>
+        </div>
+        <div class="featured-1">
+            <img src="img/thumb2.jpg" alt="Take Me Down Album Cover">
+            <h4>Featured Record</h4>
+            <h3>Take Me Down</h3>
+            <h4>Drake</h4>
+            <p>Lorem ipsum<br />dolor sit amet, consectetur<br />adipiscing elit. Vestibulum tincidunt<br />placerat
             lacus, quis pharetra sem<br />ornare eu. In pulvinar iaculis <br />condimentum. Nullam feugiat<br />venenatis
             pulvinar. Pellentesque et <br />dolor a nisi suscipit mattis. Nunc <br />sapien sem, bibendum at
-            molestie <br />non, sagittis vitae ligula.</dd>
-    </dl>
-    <h2>Recommendations</h2>
-    <div class="product-container">
-        <div class="product">
-            <div class="product-img">
+            molestie <br />non, sagittis vitae ligula.</p>
+        </div>
+    </section>
+    <section id="product1" class="section-p1">
+        <h2>Recommendations</h2>
+        <div class="product-container">
+            <div class="product">
                 <span class="discount-tag">50% off</span>
-                <img src="img/card1.png" class="thumbnail" alt="">
-            </div>
-            <div class="product-info">
+                <img src="img/thumb1.jpg" class="thumbnail" alt="">
                 <h3 class="prod-name">Kupla Coniferous</h3>
                 <p class="prod-artist">Eminem</p>
                 <span class="price">$20</span><span class="actual-price">$40</span>
             </div>
-        </div>
-    </div>
-    <div class="product-container">
-        <div class="product">
-            <div class="product-img">
-                <img src="img/card1.png" class="thumbnail" alt="">
-            </div>
-            <div class="product-info">
+            <div class="product">
+                <span class="discount-tag">50% off</span>
+                <img src="img/thumb2.jpg" class="thumbnail" alt="">
                 <h3 class="prod-name">Kupla Coniferous</h3>
                 <p class="prod-artist">Eminem</p>
                 <span class="price">$20</span><span class="actual-price">$40</span>
             </div>
-        </div>
-    </div>
-    <div class="product-container">
-        <div class="product">
-            <div class="product-img">
-                <span class="discount-tag">30% off</span>
-                <img src="img/card1.png" class="thumbnail" alt="">
-            </div>
-            <div class="product-info">
-                <h3 class="prod-name">Take Me Down</h3>
-                <p class="prod-artist">Drake</p>
+            <div class="product">
+                <span class="discount-tag">50% off</span>
+                <img src="img/thumb3.jpg" class="thumbnail" alt="">
+                <h3 class="prod-name">Kupla Coniferous</h3>
+                <p class="prod-artist">Eminem</p>
                 <span class="price">$20</span><span class="actual-price">$40</span>
             </div>
-        </div>
-    </div>
-    <div class="product-container">
-        <div class="product">
-            <div class="product-img">
-                <span class="discount-tag">25% off</span>
-                <img src="img/card1.png" class="thumbnail" alt="">
-            </div>
-            <div class="product-info">
-                <h3 class="prod-name">Yeu Nhau</h3>
-                <p class="prod-artist">Trinh Son</p>
+            <div class="product">
+                <span class="discount-tag">50% off</span>
+                <img src="img/thumb4.jpg" class="thumbnail" alt="">
+                <h3 class="prod-name">Kupla Coniferous</h3>
+                <p class="prod-artist">Eminem</p>
                 <span class="price">$20</span><span class="actual-price">$40</span>
             </div>
+            
         </div>
-    </div>
-    <div class="product-container">
-        <div class="product">
-            <div class="product-img">
-                <img src="img/card1.png" class="thumbnail" alt="">
-            </div>
-            <div class="product-info">
-                <h3 class="prod-name">Classy Lady</h3>
-                <p class="prod-artist">M. Monica</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
-            </div>
-        </div>
-    </div>
-    <div class="product-container">
-        <div class="product">
-            <div class="product-img">
-                <img src="img/card1.png" class="thumbnail" alt="">
-            </div>
-            <div class="product-info">
-                <h3 class="prod-name">Random Album</h3>
-                <p class="prod-artist">Rando</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
-            </div>
-        </div>
-    </div>
-    <div class="product-container">
-        <div class="product">
-            <div class="product-img">
-                <img src="img/card1.png" class="thumbnail" alt="">
-            </div>
-            <div class="product-info">
-                <h3 class="prod-name">Girl's Generation</h3>
-                <p class="prod-artist">SNSD</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
-            </div>
-        </div>
-    </div>
-    <div class="product-container">
-        <div class="product">
-            <div class="product-img">
-                <img src="img/card1.png" class="thumbnail" alt="">
-            </div>
-            <div class="product-info">
-                <h3 class="prod-name">Cry Baby</h3>
-                <p class="prod-artist">Melanie Martinez</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
-            </div>
-        </div>
-    </div>
+    </section>
     <button class="next-btn">VIEW MORE</button> 
     <section class="genre-container">
         <a href="#" class="genre">
