--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@
 <body>
     <section id="header">
         <a href="#"><img src="logo.png" class="logo" alt=""></a>
-        <h3>Australian Rare Vinyls</h3>
+        <h4>Australian Rare Vinyls</h4>
         <ul id="navbar">
             <li><a class='active' href="homepage.html">Home</a></li>
             <li><a href="#recom">Recommendations</a></li>
@@ -34,19 +34,22 @@
                 </svg></a></li>
         </ul>
     </section>
-    <section id='feature'>
-        <div class="featured-1">
+    <section id='feature1'>
+        <div class="featured-1a">
             <img src="img/thumb1.jpg" alt="Kupla Coniferous Album Cover">
-            <h4>Featured Record</h4>
-            <h3>Kupla Coniferous</h3>
-            <h4>Eminem</h4>
-            <p>Lorem ipsum<br />dolor sit amet, consectetur<br />adipiscing elit. Vestibulum tincidunt<br />placerat
-            lacus, quis pharetra sem<br />ornare eu. In pulvinar iaculis <br />condimentum. Nullam feugiat<br />venenatis
-            pulvinar. Pellentesque et <br />dolor a nisi suscipit mattis. Nunc <br />sapien sem, bibendum at
-            molestie <br />non, sagittis vitae ligula.</p>
         </div>
-        <div class="featured-1">
-            <img src="img/thumb2.jpg" alt="Take Me Down Album Cover">
+        <div class="featured-1b">
+                <h4>Featured Record</h4>
+                <h3>Kupla Coniferous</h3>
+                <h4>Eminem</h4>
+                <p>Lorem ipsum<br />dolor sit amet, consectetur<br />adipiscing elit. Vestibulum tincidunt<br />placerat
+                lacus, quis pharetra sem<br />ornare eu. In pulvinar iaculis <br />condimentum. Nullam feugiat<br />venenatis
+                pulvinar. Pellentesque et <br />dolor a nisi suscipit mattis. Nunc <br />sapien sem, bibendum at
+                molestie <br />non, sagittis vitae ligula.</p>
+        </div>
+    </section>
+    <section id="feature2">
+        <div class='featured-2a'>
             <h4>Featured Record</h4>
             <h3>Take Me Down</h3>
             <h4>Drake</h4>
@@ -55,39 +58,81 @@
             pulvinar. Pellentesque et <br />dolor a nisi suscipit mattis. Nunc <br />sapien sem, bibendum at
             molestie <br />non, sagittis vitae ligula.</p>
         </div>
+        <div class="featured-2b">
+            <img src="img/thumb2.jpg" alt="Take Me Down Album Cover">
+        </div>
     </section>
     <section id="product1" class="section-p1">
-        <h2>Recommendations</h2>
+        <h3>Recommendations</h3>
         <div class="product-container">
             <div class="product">
-                <span class="discount-tag">50% off</span>
+                <span class="discount-tag">20% off</span>
                 <img src="img/thumb1.jpg" class="thumbnail" alt="">
-                <h3 class="prod-name">Kupla Coniferous</h3>
-                <p class="prod-artist">Eminem</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
+                <div class="des">
+                    <h4 class="prod-name">Kupla Coniferous</h4>
+                    <p class="prod-artist">Eminem</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
             </div>
             <div class="product">
-                <span class="discount-tag">50% off</span>
-                <img src="img/thumb2.jpg" class="thumbnail" alt="">
-                <h3 class="prod-name">Kupla Coniferous</h3>
-                <p class="prod-artist">Eminem</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
+                <span class="discount-tag">10% off</span>
+                <img src="img/thumb9.jpg" class="thumbnail" alt="">
+                <div class="des">
+                    <h4 class="prod-name">Pink Friday</h4>
+                    <p class="prod-artist">Nicki Minaj</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
             </div>
             <div class="product">
-                <span class="discount-tag">50% off</span>
+                <span class="discount-tag">25% off</span>
                 <img src="img/thumb3.jpg" class="thumbnail" alt="">
-                <h3 class="prod-name">Kupla Coniferous</h3>
-                <p class="prod-artist">Eminem</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
+                <div class="des">
+                    <h4 class="prod-name">Mustache Gentleman</h4>
+                    <p class="prod-artist">B.O.B.</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
             </div>
             <div class="product">
-                <span class="discount-tag">50% off</span>
+                <span class="discount-tag">10% off</span>
                 <img src="img/thumb4.jpg" class="thumbnail" alt="">
-                <h3 class="prod-name">Kupla Coniferous</h3>
-                <p class="prod-artist">Eminem</p>
-                <span class="price">$20</span><span class="actual-price">$40</span>
+                <div class="des">
+                    <h4 class="prod-name">Teflon Don</h4>
+                    <p class="prod-artist">Kanye West</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
             </div>
-            
+            <div class="product">
+                <img src="img/thumb5.jpg" class="thumbnail" alt="">
+                <div class="des">
+                    <h4 class="prod-name">Call Me By My Name</h4>
+                    <p class="prod-artist">Hiroshi Takana</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="product">
+                <img src="img/thumb6.webp" class="thumbnail" alt="">
+                <div class="des">
+                    <h4 class="prod-name">Chill Lofi</h4>
+                    <p class="prod-artist">Cavetown</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="product">
+                <img src="img/thumb7.jpg" class="thumbnail" alt="">
+                <div class="des">
+                    <h4 class="prod-name">Mozart Dupe</h4>
+                    <p class="prod-artist">Trazom</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="product">
+                <img src="img/thumb8.png" class="thumbnail" alt="">
+                <div class="des">
+                    <h4 class="prod-name">Bell in the Multiverse</h4>
+                    <p class="prod-artist">Lil Bell</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
         </div>
     </section>
     <button class="next-btn">VIEW MORE</button> 
