--- a/homepage.html
+++ b/homepage.html
@@ -66,21 +66,21 @@
         <h3>Recommendations</h3>
         <div class="product-container">
             <div class="product">
-                <span class="discount-tag">20% off</span>
+                <span class="discount-tag">30% off</span>
                 <img src="img/thumb1.jpg" class="thumbnail" alt="">
                 <div class="des">
                     <h4 class="prod-name">Kupla Coniferous</h4>
                     <p class="prod-artist">Eminem</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <p class="price">$36.99</p><p class="actual-price">$52.99</p>
                 </div>
             </div>
             <div class="product">
-                <span class="discount-tag">10% off</span>
+                <span class="discount-tag">15% off</span>
                 <img src="img/thumb9.jpg" class="thumbnail" alt="">
                 <div class="des">
                     <h4 class="prod-name">Pink Friday</h4>
                     <p class="prod-artist">Nicki Minaj</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <p class="price">$46.79</p><p class="actual-price">$54.99</p>
                 </div>
             </div>
             <div class="product">
@@ -89,7 +89,7 @@
                 <div class="des">
                     <h4 class="prod-name">Mustache Gentleman</h4>
                     <p class="prod-artist">B.O.B.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <p class="price">$33.69</p><p class="actual-price">$44.99</p>
                 </div>
             </div>
             <div class="product">
@@ -98,7 +98,7 @@
                 <div class="des">
                     <h4 class="prod-name">Teflon Don</h4>
                     <p class="prod-artist">Kanye West</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <p class="price">$58.49</p><p class="actual-price">$64.99</p>
                 </div>
             </div>
             <div class="product">
@@ -106,7 +106,7 @@
                 <div class="des">
                     <h4 class="prod-name">Call Me By My Name</h4>
                     <p class="prod-artist">Hiroshi Takana</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <p class="price">$39.99</p>
                 </div>
             </div>
             <div class="product">
@@ -114,7 +114,7 @@
                 <div class="des">
                     <h4 class="prod-name">Chill Lofi</h4>
                     <p class="prod-artist">Cavetown</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <p class="price">$79.99</p>
                 </div>
             </div>
             <div class="product">
@@ -122,7 +122,7 @@
                 <div class="des">
                     <h4 class="prod-name">Mozart Dupe</h4>
                     <p class="prod-artist">Trazom</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <p class="price">$34.99</p>
                 </div>
             </div>
             <div class="product">
@@ -130,7 +130,7 @@
                 <div class="des">
                     <h4 class="prod-name">Bell in the Multiverse</h4>
                     <p class="prod-artist">Lil Bell</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <p class="price">$59.99</p>
                 </div>
             </div>
         </div>
