--- a/homepage.html
+++ b/homepage.html
@@ -70,7 +70,7 @@
                 <img src="img/thumb1.jpg" class="thumbnail" alt="">
                 <div class="des">
                     <h4 class="prod-name">Kupla Coniferous</h4>
-                    <p class="prod-artist">Eminem</p>
+                    <h5 class="prod-artist">Eminem</h5>
                     <p class="price">$36.99</p><p class="actual-price">$52.99</p>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                 <img src="img/thumb9.jpg" class="thumbnail" alt="">
                 <div class="des">
                     <h4 class="prod-name">Pink Friday</h4>
-                    <p class="prod-artist">Nicki Minaj</p>
+                    <h5 class="prod-artist">Nicki Minaj</h5>
                     <p class="price">$46.79</p><p class="actual-price">$54.99</p>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 <img src="img/thumb3.jpg" class="thumbnail" alt="">
                 <div class="des">
                     <h4 class="prod-name">Mustache Gentleman</h4>
-                    <p class="prod-artist">B.O.B.</p>
+                    <h5 class="prod-artist">B.O.B.</h5>
                     <p class="price">$33.69</p><p class="actual-price">$44.99</p>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                 <img src="img/thumb4.jpg" class="thumbnail" alt="">
                 <div class="des">
                     <h4 class="prod-name">Teflon Don</h4>
-                    <p class="prod-artist">Kanye West</p>
+                    <h5 class="prod-artist">Kanye West</h5>
                     <p class="price">$58.49</p><p class="actual-price">$64.99</p>
                 </div>
             </div>
@@ -105,15 +105,15 @@
                 <img src="img/thumb5.jpg" class="thumbnail" alt="">
                 <div class="des">
                     <h4 class="prod-name">Call Me By My Name</h4>
-                    <p class="prod-artist">Hiroshi Takana</p>
-                    <p class="price">$39.99</p>
+                    <h5 class="prod-artist">Hiroshi Takana</h5>
+                    <p class="price">$39.99 </p>
                 </div>
             </div>
             <div class="product">
                 <img src="img/thumb6.webp" class="thumbnail" alt="">
                 <div class="des">
                     <h4 class="prod-name">Chill Lofi</h4>
-                    <p class="prod-artist">Cavetown</p>
+                    <h5 class="prod-artist">Cavetown</h5>
                     <p class="price">$79.99</p>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                 <img src="img/thumb7.jpg" class="thumbnail" alt="">
                 <div class="des">
                     <h4 class="prod-name">Mozart Dupe</h4>
-                    <p class="prod-artist">Trazom</p>
+                    <h5 class="prod-artist">Trazom</h5>
                     <p class="price">$34.99</p>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                 <img src="img/thumb8.png" class="thumbnail" alt="">
                 <div class="des">
                     <h4 class="prod-name">Bell in the Multiverse</h4>
-                    <p class="prod-artist">Lil Bell</p>
+                    <h5 class="prod-artist">Lil Bell</h5>
                     <p class="price">$59.99</p>
                 </div>
             </div>
