--- a/homepage.html
+++ b/homepage.html
@@ -34,6 +34,11 @@
                 </svg></a></li>
         </ul>
     </section>
+    <section id="banner">
+        <p><span>Free shipping</span> for orders over <span>$70</span></p>
+        <p></span> 15% Discount Sitewide: <span>EOFY22</span></p>
+        <p><span>Exclusive</span> Special Edition Albums on <Span>Sale</Span></p>
+    </section>
     <section id='feature1'>
         <div class="featured-1a">
             <img src="img/thumb1.jpg" alt="Kupla Coniferous Album Cover">
