--- a/homepage.html
+++ b/homepage.html
@@ -139,25 +139,42 @@
                 </div>
             </div>
         </div>
+        <button class="next-btn">VIEW MORE</button> 
     </section>
-    <button class="next-btn">VIEW MORE</button> 
-    <section class="genre-container">
-        <a href="#" class="genre">
-            <img src="img/women-collection.png" alt="">
-            <p class="genre-title">Alternative</p>
-        </a>
-        <a href="#" class="genre">
-            <img src="img/women-collection.png" alt="">
-            <p class="genre-title">Jazz/Blues</p>
-        </a>
-        <a href="#" class="genre">
-            <img src="img/women-collection.png" alt="">
-            <p class="genre-title">Preloved vinyls</p>
-        </a>
-        <a href="#" class="genre">
-            <img src="img/women-collection.png" alt="">
-            <p class="genre-title">Pop Culture</p>
-        </a>
+    <section id="genre-banner" class="section-p1">
+        <h3 id="genres">Popular Genres</h3>
+        <div class="genre-container">
+            <div class="banner-box">
+                <h3>Blues</h3>
+            </div>
+            <div class="banner-box box2">
+                <h3>Alternative</h3>
+            </div>
+            <div class="banner-box box3">
+                <h3>Popular Culture</h3>
+            </div>
+            <div class="banner-box box4">
+                <h3>Metal/Hard Rock</h3>
+            </div>
+            <div class="banner-box box5">
+                <h3>Preloved Vinyl</h3>
+            </div>
+            <div class="banner-box box6">
+                <h3>Stoner/Doom</h3>
+            </div>
+        </div>
+        <button class="next-btn">VIEW MORE</button> 
+    </section>
+    <section id="newsletter" class="section-p1">
+        <div class="newstext">
+            <h3>Sign up for Newsletters</h3>
+            <p>Get E-mail updates about our latest collections & member-only offers</p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Your email address">
+            <button class="next-btn">Sign Up</button>
+        </div>
+        </div>
     </section>
     <footer>
         <div class="footer">
