--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section id="header">
-        <a href="#"><img src="logo.png" class="logo" alt=""></a>
+        <a href="#"><img src="img/logo.svg" class="logo" alt=""></a>
         <h4>Australian Rare Vinyls</h4>
         <ul id="navbar">
             <li><a class='active' href="homepage.html">Home</a></li>
@@ -176,39 +176,76 @@
         </div>
         </div>
     </section>
-    <footer>
-        <div class="footer">
-            <img src="img/light-logo.png" class="logo" alt="">
-            <ul class="quick-links">
-                    <li><a href="#" class="footer-link">Contact</a></li>
-                    <li><a href="#" class="footer-link">About</a></li>
-                    <li><a href="#" class="footer-link">Search</a></li>
-                    <li><a href="#" class="footer-link">FAQs</a></li>
-                    <li><a href="#" class="footer-link">Shipping & Refund Policy</a></li>
-                    <li><a href="#" class="footer-link">Privacy Policy</a></li>
-                    <li><a href="#" class="footer-link">Terms of Service</a></li>
-            </ul>
-            <div class="socials">
-                <a href=""><i class="instagram"></i></a>
-                <a href=""><i class="instagram"></i></a>
-                <a href=""><i class="instagram"></i></a>
-            </div>
-            <div class="payments">
-                <i class="amex"></i>
-                <i class="jcb"></i>
-                <i class="mastercard"></i>
-                <i class="visa"></i>
-            </div>
-            <div class="alt-payments">
-                <i class="applepay"></i>
-                <i class="googlepay"></i>
-                <i class="paypal"></i>
-                <i class="shoppay"></i>
-                <i class="afterpay"></i>
+    <footer class="section-p1">
+        <div class="col">
+            <img class="logo" src="img/logo.svg" alt="logo">
+            <h4>Contact</h4>
+            <p><strong>Address: </strong> 228 A'Beckett Street, Melbourne VIC 3000</p>
+            <p><strong>Phone:</strong> +61 8888 8888</p>
+            <p><strong>Hours:</strong> 10:00 - 21:00, Mon - Sun</p>
+            <div class="follow">
+                <h4>Follow Us</h4>
+                <div class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" 
+                    aria-hidden="true" 
+                    role="img" 
+                    width="26" height="26" 
+                    preserveAspectRatio="xMidYMid meet" 
+                    viewBox="0 0 24 24">
+                    <path fill="#130C12" 
+                    d="M13.397 20.997v-8.196h2.765l.411-3.209h-3.176V7.548c0-.926.258-1.56 1.587-1.56h1.684V3.127A22.336 22.336 0 0 0 14.201 3c-2.444 0-4.122 1.492-4.122 4.231v2.355H7.332v3.209h2.753v8.202h3.312z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" 
+                    aria-hidden="true" 
+                    role="img" width="26" height="26" 
+                    preserveAspectRatio="xMidYMid meet" 
+                    viewBox="0 0 24 24">
+                    <path fill="#130c12" d="M20.947 8.305a6.53 6.53 0 0 0-.419-2.216a4.61 4.61 0 0 0-2.633-2.633a6.606 6.606 0 0 0-2.186-.42c-.962-.043-1.267-.055-3.709-.055s-2.755 0-3.71.055a6.606 6.606 0 0 0-2.185.42a4.607 4.607 0 0 0-2.633 2.633a6.554 6.554 0 0 0-.419 2.185c-.043.963-.056 1.268-.056 3.71s0 2.754.056 3.71c.015.748.156 1.486.419 2.187a4.61 4.61 0 0 0 2.634 2.632a6.584 6.584 0 0 0 2.185.45c.963.043 1.268.056 3.71.056s2.755 0 3.71-.056a6.59 6.59 0 0 0 2.186-.419a4.615 4.615 0 0 0 2.633-2.633c.263-.7.404-1.438.419-2.187c.043-.962.056-1.267.056-3.71c-.002-2.442-.002-2.752-.058-3.709zm-8.953 8.297c-2.554 0-4.623-2.069-4.623-4.623s2.069-4.623 4.623-4.623a4.623 4.623 0 0 1 0 9.246zm4.807-8.339a1.077 1.077 0 0 1-1.078-1.078a1.077 1.077 0 1 1 2.155 0c0 .596-.482 1.078-1.077 1.078z"/><circle cx="11.994" cy="11.979" r="3.003" fill="#130c12"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" 
+                    aria-hidden="true" role="img" width="26" height="26" 
+                    preserveAspectRatio="xMidYMid meet" 
+                    viewBox="0 0 24 24">
+                    <path fill="#130c12" d="M19.633 7.997c.013.175.013.349.013.523c0 5.325-4.053 11.461-11.46 11.461c-2.282 0-4.402-.661-6.186-1.809c.324.037.636.05.973.05a8.07 8.07 0 0 0 5.001-1.721a4.036 4.036 0 0 1-3.767-2.793c.249.037.499.062.761.062c.361 0 .724-.05 1.061-.137a4.027 4.027 0 0 1-3.23-3.953v-.05c.537.299 1.16.486 1.82.511a4.022 4.022 0 0 1-1.796-3.354c0-.748.199-1.434.548-2.032a11.457 11.457 0 0 0 8.306 4.215c-.062-.3-.1-.611-.1-.923a4.026 4.026 0 0 1 4.028-4.028c1.16 0 2.207.486 2.943 1.272a7.957 7.957 0 0 0 2.556-.973a4.02 4.02 0 0 1-1.771 2.22a8.073 8.073 0 0 0 2.319-.624a8.645 8.645 0 0 1-2.019 2.083z"/>
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" 
+                    aria-hidden="true" role="img" width="26" height="26" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="#130c12" d="M21.593 7.203a2.506 2.506 0 0 0-1.762-1.766C18.265 5.007 12 5 12 5s-6.264-.007-7.831.404a2.56 2.56 0 0 0-1.766 1.778c-.413 1.566-.417 4.814-.417 4.814s-.004 3.264.406 4.814c.23.857.905 1.534 1.763 1.765c1.582.43 7.83.437 7.83.437s6.265.007 7.831-.403a2.515 2.515 0 0 0 1.767-1.763c.414-1.565.417-4.812.417-4.812s.02-3.265-.407-4.831zM9.996 15.005l.005-6l5.207 3.005l-5.212 2.995z"/>
+                    </svg>
+                </div>
             </div>
         </div>
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">Contact Us</a>
+            <a href="#">Shipping & Refund Policy</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Use</a>
+        </div>
+
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In or Register</a>
+            <a href="#">Shopping Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+
+        <div class="col-install">
+            <h4>Secured Payments</h4>
+            <div class="payments">
+            <img src="img/amex.svg" alt="">
+            <img src="img/jcb.svg" alt="">
+            <img src="img/mastercard.svg" alt="">
+            <img src="img/visa.svg" alt="">
+            <img src="img/applepay.svg" alt="">
+            <img src="img/googlepay.svg" alt="">
+            <img src="img/paypal.svg" alt="">
+            <img src="img/afterpay.svg" alt="">
+            <img src="img/shoppay.svg" alt="">
+        </div>
+        </div>
         <div class="copyright">
-            <p>© 2022, OZ Online Music Records</p>
+            <p>© 2022, OZ Music Online Australia</p>
         </div>
     </footer>
     <script src="script.js"></script>
