--- a/homepage.html
+++ b/homepage.html
@@ -10,18 +10,18 @@
 <body>
     <section id="header">
         <a href="#"><img src="img/logo.svg" class="logo" alt=""></a>
-        <h4>Australian Rare Vinyls</h4>
-        <ul id="navbar">
-            <li><a class='active' href="homepage.html">Home</a></li>
-            <li><a href="#recom">Recommendations</a></li>
-            <li><a href="#browse">Browse</a></li>
-            <li><a href="#account">Your Account</a></li>
-            <li><a href="cart.html"><svg 
+        <div>
+            <ul id="navbar">
+                <li><a class='active' href="homepage.html">Home</a></li>
+                <li><a href="#recom">Recommendations</a></li>
+                <li><a href="#browse">Browse</a></li>
+                <li><a href="#account">Your Account</a></li>
+                <li><a href="cart.html"><svg 
                 xmlns="http://www.w3.org/2000/svg" 
                 aria-hidden="true" 
                 role="img" 
-                width="1em"
-                height="1em" 
+                width="26"
+                height="26" 
                 preserveAspectRatio="xMidYMid meet" 
                 viewBox="0 0 24 24">
                 <g fill="none" 
@@ -32,7 +32,37 @@
                 <path d="M3.977 9.84A2 2 0 0 1 5.971 8h12.058a2 2 0 0 1 1.994 1.84l.803 10A2 2 0 0 1 18.833 22H5.167a2 2 0 0 1-1.993-2.16l.803-10Z"/>
                 <path d="M16 11V6a4 4 0 0 0-4-4v0a4 4 0 0 0-4 4v5"/></g>
                 </svg></a></li>
-        </ul>
+                <a href="#" id="close">
+                    <svg xmlns="http://www.w3.org/2000/svg" 
+                    aria-hidden="true" role="img" 
+                    width="22" height="22" preserveAspectRatio="xMidYMid meet" viewBox="0 0 1024 1024"><path fill="#130c12" d="M195.2 195.2a64 64 0 0 1 90.496 0L512 421.504L738.304 195.2a64 64 0 0 1 90.496 90.496L602.496 512L828.8 738.304a64 64 0 0 1-90.496 90.496L512 602.496L285.696 828.8a64 64 0 0 1-90.496-90.496L421.504 512L195.2 285.696a64 64 0 0 1 0-90.496z"/>
+                    </svg>
+                </a>
+            </ul>
+        </div>
+        <div id="mobile">
+            <i href="cart.html"><svg svg 
+                xmlns="http://www.w3.org/2000/svg" 
+                aria-hidden="true" 
+                role="img" 
+                width="25"
+                height="25" 
+                preserveAspectRatio="xMidYMid meet" 
+                viewBox="0 0 24 24">
+                <g fill="none" 
+                stroke="#130C12" 
+                stroke-linecap="round" 
+                stroke-linejoin="round" 
+                stroke-width="2">
+                <path d="M3.977 9.84A2 2 0 0 1 5.971 8h12.058a2 2 0 0 1 1.994 1.84l.803 10A2 2 0 0 1 18.833 22H5.167a2 2 0 0 1-1.993-2.16l.803-10Z"/>
+                <path d="M16 11V6a4 4 0 0 0-4-4v0a4 4 0 0 0-4 4v5"/></g>
+                </svg></i>
+            <i id="bar">
+                <svg xmlns="http://www.w3.org/2000/svg" 
+                aria-hidden="true" role="img" 
+                width="26" height="26" preserveAspectRatio="xMidYMid meet" viewBox="0 0 1024 1024"><path fill="#130c12" d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 0 0 0 13.8z"/>
+                </svg></i>
+        </div>
     </section>
     <section id="banner">
         <p><span>Free shipping</span> for orders over <span>$70</span></p>
