--- a/homepage.html
+++ b/homepage.html
@@ -13,8 +13,8 @@
         <div>
             <ul id="navbar">
                 <li><a class='active' href="homepage.html">Home</a></li>
-                <li><a href="#recom">Recommendations</a></li>
-                <li><a href="#browse">Browse</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="#collections">Collections</a></li>
                 <li><a href="#account">Your Account</a></li>
                 <li><a href="cart.html"><svg 
                 xmlns="http://www.w3.org/2000/svg" 
@@ -70,10 +70,10 @@
         <p><span>Exclusive</span> Special Edition Albums on <Span>Sale</Span></p>
     </section>
     <section id='feature1'>
-        <div class="featured-1a">
+        <div class="featured-1a" onclick="window.location.href='product.html';">
             <img src="img/thumb1.jpg" alt="Kupla Coniferous Album Cover">
         </div>
-        <div class="featured-1b">
+        <div class="featured-1b" onclick="window.location.href='product.html';">
                 <h4>Featured Record</h4>
                 <h3>Kupla Coniferous</h3>
                 <h4>Eminem</h4>
@@ -100,7 +100,7 @@
     <section id="product1" class="section-p1">
         <h3>Recommendations</h3>
         <div class="product-container">
-            <div class="product">
+            <div class="product" onclick="window.location.href='product.html';">
                 <span class="discount-tag">30% off</span>
                 <img src="img/thumb1.jpg" class="thumbnail" alt="">
                 <div class="des">
