--- a/cart.html
+++ b/cart.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Homepage</title>
+    <title>Product</title>
 </head>
 <body>
     <section id="header">
         <a href="#"><img src="img/logo.svg" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
-                <li><a class='active' href="homepage.html">Home</a></li>
-                <li><a href="#recom">Recommendations</a></li>
+                <li><a href="homepage.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="#browse">Browse</a></li>
                 <li><a href="#account">Your Account</a></li>
-                <li><a href="cart.html"><svg 
+                <li><a class="active" href="cart.html"><svg 
                 xmlns="http://www.w3.org/2000/svg" 
                 aria-hidden="true" 
                 role="img" 
@@ -41,7 +41,7 @@
             </ul>
         </div>
         <div id="mobile">
-            <i href="cart.html"><svg svg 
+            <i class='active' href="cart.html"><svg svg 
                 xmlns="http://www.w3.org/2000/svg" 
                 aria-hidden="true" 
                 role="img" 
@@ -69,141 +69,66 @@
         <p></span> 15% Discount Sitewide: <span>EOFY22</span></p>
         <p><span>Exclusive</span> Special Edition Albums on <Span>Sale</Span></p>
     </section>
-    <section id='feature1'>
-        <div class="featured-1a">
-            <img src="img/thumb1.jpg" alt="Kupla Coniferous Album Cover">
-        </div>
-        <div class="featured-1b">
-                <h4>Featured Record</h4>
-                <h3>Kupla Coniferous</h3>
-                <h4>Eminem</h4>
-                <p>Lorem ipsum<br />dolor sit amet, consectetur<br />adipiscing elit. Vestibulum tincidunt<br />placerat
-                lacus, quis pharetra sem<br />ornare eu. In pulvinar iaculis <br />condimentum. Nullam feugiat<br />venenatis
-                pulvinar. Pellentesque et <br />dolor a nisi suscipit mattis. Nunc <br />sapien sem, bibendum at
-                molestie <br />non, sagittis vitae ligula.</p>
-        </div>
+    <section id="cart" class="section-p1">
+        <table width="100%">
+            <thead>
+                <tr>
+                    <td>Remove</td>
+                    <td>Image</td>
+                    <td>Product</td>
+                    <td>Price</td>
+                    <td>Quantity</td>
+                    <td>Subtotal</td>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td><a href="#"><img class="remove" src="img/crossmenu.svg" alt=""></img></a></td>
+                    <td><img src="img/thumb10.jpg" alt=""></td>
+                    <td>Kupla Coniferous</td>
+                    <td>$36.99</td>
+                    <td><input type="number" value="1" name="" id=""></td>
+                    <td>$36.99</td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img class="remove" src="img/crossmenu.svg" alt=""></img></a></td>
+                    <td><img src="img/thumb11.jpg" alt=""></td>
+                    <td>Take Me Up</td>
+                    <td>$69.99</td>
+                    <td><input type="number" value="1" name="" id=""></td>
+                    <td>$118.19</td>
+                </tr>
+            </tbody>
+        </table>
     </section>
-    <section id="feature2">
-        <div class='featured-2a'>
-            <h4>Featured Record</h4>
-            <h3>Take Me Down</h3>
-            <h4>Drake</h4>
-            <p>Lorem ipsum<br />dolor sit amet, consectetur<br />adipiscing elit. Vestibulum tincidunt<br />placerat
-            lacus, quis pharetra sem<br />ornare eu. In pulvinar iaculis <br />condimentum. Nullam feugiat<br />venenatis
-            pulvinar. Pellentesque et <br />dolor a nisi suscipit mattis. Nunc <br />sapien sem, bibendum at
-            molestie <br />non, sagittis vitae ligula.</p>
-        </div>
-        <div class="featured-2b">
-            <img src="img/thumb2.jpg" alt="Take Me Down Album Cover">
-        </div>
-    </section>
-    <section id="product1" class="section-p1">
-        <h3>Recommendations</h3>
-        <div class="product-container">
-            <div class="product">
-                <span class="discount-tag">30% off</span>
-                <img src="img/thumb1.jpg" class="thumbnail" alt="">
-                <div class="des">
-                    <h4 class="prod-name">Kupla Coniferous</h4>
-                    <h5 class="prod-artist">Eminem</h5>
-                    <p class="price">$36.99</p><p class="actual-price">$52.99</p>
-                </div>
-            </div>
-            <div class="product">
-                <span class="discount-tag">15% off</span>
-                <img src="img/thumb9.jpg" class="thumbnail" alt="">
-                <div class="des">
-                    <h4 class="prod-name">Pink Friday</h4>
-                    <h5 class="prod-artist">Nicki Minaj</h5>
-                    <p class="price">$46.79</p><p class="actual-price">$54.99</p>
-                </div>
-            </div>
-            <div class="product">
-                <span class="discount-tag">25% off</span>
-                <img src="img/thumb3.jpg" class="thumbnail" alt="">
-                <div class="des">
-                    <h4 class="prod-name">Mustache Gentleman</h4>
-                    <h5 class="prod-artist">B.O.B.</h5>
-                    <p class="price">$33.69</p><p class="actual-price">$44.99</p>
-                </div>
-            </div>
-            <div class="product">
-                <span class="discount-tag">10% off</span>
-                <img src="img/thumb4.jpg" class="thumbnail" alt="">
-                <div class="des">
-                    <h4 class="prod-name">Teflon Don</h4>
-                    <h5 class="prod-artist">Kanye West</h5>
-                    <p class="price">$58.49</p><p class="actual-price">$64.99</p>
-                </div>
-            </div>
-            <div class="product">
-                <img src="img/thumb5.jpg" class="thumbnail" alt="">
-                <div class="des">
-                    <h4 class="prod-name">Call Me By My Name</h4>
-                    <h5 class="prod-artist">Hiroshi Takana</h5>
-                    <p class="price">$39.99 </p>
-                </div>
-            </div>
-            <div class="product">
-                <img src="img/thumb6.webp" class="thumbnail" alt="">
-                <div class="des">
-                    <h4 class="prod-name">Chill Lofi</h4>
-                    <h5 class="prod-artist">Cavetown</h5>
-                    <p class="price">$79.99</p>
-                </div>
-            </div>
-            <div class="product">
-                <img src="img/thumb7.jpg" class="thumbnail" alt="">
-                <div class="des">
-                    <h4 class="prod-name">Mozart Dupe</h4>
-                    <h5 class="prod-artist">Trazom</h5>
-                    <p class="price">$34.99</p>
-                </div>
-            </div>
-            <div class="product">
-                <img src="img/thumb8.png" class="thumbnail" alt="">
-                <div class="des">
-                    <h4 class="prod-name">Bell in the Multiverse</h4>
-                    <h5 class="prod-artist">Lil Bell</h5>
-                    <p class="price">$59.99</p>
-                </div>
+
+    <section id="cart-add" class="section-p1">
+        <div id="coupon">
+            <h3>Apply Coupon</h3>
+            <div>
+                <input type="text" name="" id="" placeholder="Enter Your Coupon">
+                <button class="next-btn">Apply</button>
             </div>
         </div>
-        <button class="next-btn">VIEW MORE</button> 
-    </section>
-    <section id="genre-banner" class="section-p1">
-        <h3 id="genres">Popular Genres</h3>
-        <div class="genre-container">
-            <div class="banner-box">
-                <h3>Blues</h3>
-            </div>
-            <div class="banner-box box2">
-                <h3>Alternative</h3>
-            </div>
-            <div class="banner-box box3">
-                <h3>Popular Culture</h3>
-            </div>
-            <div class="banner-box box4">
-                <h3>Metal/Hard Rock</h3>
-            </div>
-            <div class="banner-box box5">
-                <h3>Preloved Vinyl</h3>
-            </div>
-            <div class="banner-box box6">
-                <h3>Stoner/Doom</h3>
-            </div>
-        </div>
-        <button class="next-btn">VIEW MORE</button> 
-    </section>
-    <section id="newsletter" class="section-p1">
-        <div class="newstext">
-            <h3>Sign up for Newsletters</h3>
-            <p>Get E-mail updates about our latest collections & member-only offers</p>
-        </div>
-        <div class="form">
-            <input type="text" placeholder="Your email address">
-            <button class="next-btn">Sign Up</button>
-        </div>
+
+        <div id="subtotal">
+            <h3>Cart Totals</h3>
+            <table>
+                <tr>
+                    <td>Cart Subtotal</td>
+                    <td>$ 335</td>
+                </tr>
+                <tr>
+                    <td>Shipping</td>
+                    <td>Free</td>
+                </tr>
+                <tr>
+                    <td><strong>Total</strong></td>
+                    <td><strong>$ 335</strong></td>
+                </tr>
+            </table>
+            <button class="next-btn" onclick="window.location.href='checkout.html';">Proceed to checkout</button>
         </div>
     </section>
     <footer class="section-p1">
@@ -279,5 +204,3 @@
         </div>
     </footer>
     <script src="script.js"></script>
-</body>
-</html>
