--- a/cart.html
+++ b/cart.html
@@ -117,20 +117,21 @@
             <table>
                 <tr>
                     <td>Cart Subtotal</td>
-                    <td>$ 335</td>
+                    <td>$ 36.99</td>
                 </tr>
                 <tr>
                     <td>Shipping</td>
-                    <td>Free</td>
+                    <td>Calculate next</td>
                 </tr>
                 <tr>
                     <td><strong>Total</strong></td>
-                    <td><strong>$ 335</strong></td>
+                    <td><strong>$ 36.99</strong></td>
                 </tr>
             </table>
             <button class="next-btn" onclick="window.location.href='checkout.html';">Proceed to checkout</button>
         </div>
     </section>
+
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="img/logo.svg" alt="logo">
