--- a/checkout.html
+++ b/checkout.html
@@ -64,6 +64,39 @@
                 </svg></i>
         </div>
     </section>
+    <div class="form">
+        <h5 class="heading">checkout</h5>
+        <h3 class="text">Shipping Address</h3>
+        <input type="text" id="address" placeholder="address">
+        <input type="text" id="street" placeholder="street">
+        <div class="three-input-container">
+            <input type="text" id="city" placeholder="city">
+            <input type="text" id="state" placeholder="state">
+            <input type="text" id="pincode" placeholder="pin code">
+        </div>
+        <input type="text" id="landmark" placeholder="land mark">
+    </div>
+
+    <div class="checkout-section">
+        <div id="subtotal">
+            <h4>Cost Summary</h4>
+            <table>
+                <tr>
+                    <td>Subtotal</td>
+                    <td>$ 36.99</td>
+                </tr>
+                <tr>
+                    <td>Shipping</td>
+                    <td>$10</td>
+                </tr>
+            </table>
+        </div>
+        <div class="checkout-box">
+            <p class="text">Total</p>
+            <h1 class="bill">$46.99</h1>
+            <button class="next-btn">place order</button>
+        </div>
+    </div>
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="img/logo.svg" alt="logo">
