--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
         <a href="#"><img src="img/logo.svg" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
-                <li><a href="homepage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="#browse">Browse</a></li>
                 <li><a href="#account">Your Account</a></li>
