--- a/checkout.html
+++ b/checkout.html
@@ -94,7 +94,7 @@
         <div class="checkout-box">
             <p class="text">Total</p>
             <h1 class="bill">$46.99</h1>
-            <button class="next-btn">place order</button>
+            <button class="next-btn" onclick="window.location.href='orderconfirm.html';">place order</button>
         </div>
     </div>
     <footer class="section-p1">
