--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Product</title>
+    <title>Checkout</title>
 </head>
 <body>
     <section id="header">
@@ -64,7 +64,7 @@
                 </svg></i>
         </div>
     </section>
-    <div class="form">
+    <div id="checkout-form" class="form form2">
         <h5 class="heading">checkout</h5>
         <h3 class="text">Shipping Address</h3>
         <input type="text" id="address" placeholder="address">
