--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul id="navbar">
                 <li><a class='active' href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a href="#collections">Collections</a></li>
+                <li><a href="#collections">Browse</a></li>
                 <li><a href="#account">Your Account</a></li>
                 <li><a href="cart.html"><svg 
                 xmlns="http://www.w3.org/2000/svg" 
